--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,21 +7,35 @@
     <thead>
       <tr>
         <th><%= User.human_attribute_name :name %></th>
+        <th class="center"><%= User.human_attribute_name :department %></th>
+        <% if current_user.admin? %>
+         <th class="center"><%= User.human_attribute_name :basic_time %></th>
+         <th class="center"><%= User.human_attribute_name :work_time %></th>
+        <% end %>
+        <th></th>
       </tr>
     </thead>
     
     <% @users.each do |user| %>
      <tr>
-       <td><%= link_to user.name, user %></td>
        <td>
+         <% if current_user.admin? %>
+          <%= link_to user.name, user %>
+         <% else %>
+          <%= user.name %>
+         <% end %>
+       </td>
+       <td class="center">
          <% if current_user.admin? && !current_user?(user) %>
+          <%= link_to "基本情報編集" , edit_basic_info_user_path(user), remote: true, class: "btn btn-success" %>
           <%= link_to "消去", user, method: :delete,
-          data: {confirm: "消去してもよろしいですか？" },
-          class: "btn btn-danger" %>
+            data: {confirm: "消去してもよろしいですか？" },class: "btn btn-danger" %>
          <% end %>
        </td>
      </tr>
-    <% end %>
+   <% end %>
   </table>
   <%= will_paginate %>
 </div>
+
+<div id="edit_basic_info" class="modale fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
